<resources>
    <string name="app_name">Easy Commute Metro</string>
    <string name="add_money">Add Money</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johndoe@noname.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="wallet">My Wallet</string>
    <string name="history">My History</string>
    <string name="tokens">My Tokens</string>
    <string name="ride">My Ride</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="choose_one">choose one</string>
    <string name="EasyCommuteMetro">EasyCommuteMetro</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="no_token_found">No Token found</string>

    <string name="netwrok_error">Network Error</string>
    <string name="error_internet_conn">Looks like you are not connected to network. Please check your internet connection.</string>
    <string name="termsNconditions"><![CDATA[I have read & agree to the <a href="http://www.easycommute.co/terms-conditions"> terms & conditions</a>]]></string>
    <string name="wait_sms">Waiting for SMS</string>
    <string name="warning_email_empty">Please enter your Email ID</string>
    <string name="warning_email_not_proper">Please enter a valid Email ID</string>
    <string name="verify">Verify</string>

    <string name="warning_name_empty">Please enter your name</string>
    <string name="warning_company_empty">Please enter company name</string>
    <string name="warning_name_spl_char">Please enter a valid name. Name which you entered seems to have a special character.</string>
    <string name="warning_name_digit">Please enter a valid name.</string>

    <string name="enter_otp">Please enter your OTP</string>

    <string name="enter_referral">Please enter your referral code</string>

    <string name="congos">Congratulations!</string>
    <string name="success_reg">You have successfully registered</string>

    <string name="lbl_name">Name</string>

    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="code">+91</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verification">Verification</string>
    <string name="regenerating_otp">Regenerating OTP </string>

    <string name="register">Register</string>

    <string name="regenerate_otp">Regenerate Your OTP</string>

    <string name="select_starting_point">Select Starting Point</string>
    <string name="select_end_point">Select End Point</string>
    <string name="get_easy_token">Get Easy Token</string>
    <string name="sit_relax_commute">Sit. . . Relax. . . Commute. . .</string>
    <string name="get_another_token">Get Another Token</string>

    <string name="generic_error">Oops! Something went wrong. Please try after sometime.</string>
    <string name="title_profile">My Profile</string>
    <string name="lbl_edit_profile">Update Profile</string>
    <string name="please_select_city">Please select city</string>
    <string name="select_city">Select City</string>
    <string name="change_selection">Change Selection</string>

    <string name="title_about_us">About us</string>
    <string name="about_us_tag_line">Affordable Metro Feeder Service</string>
    <string name="es">EasyCommute</string>
    <string name="txt_about_us">EasyCommute is a mobile based metro feeder service. We aim to provide the best possible experience for our customers in the last leg of their daily commute.</string>
    <string name="whatsapp">WhatsApp: 8099927902</string>
    <string name="email">Email: care@easycommute.co</string>
    <string name="phone">Phone: 8374590066</string>
</resources>
