<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_ride"
            android:title="@string/ride" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>

    </group>


</menu>
