<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/es"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:text="@string/about_us_tag_line"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@mipmap/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/logo"
                android:layout_marginRight="8dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:id="@+id/description"
                android:text="@string/txt_about_us"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:text="Contact Details"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:id="@+id/contact_us"
                android:textStyle="bold"
                android:textSize="18sp"/>


            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_below="@id/contact_us"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/phone"
                android:textSize="18sp"
                android:autoLink="phone"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:autoLink="email"
                android:lineSpacingExtra="3dp"
                android:text="@string/email"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/email"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/whatsapp"
                android:textSize="18sp"
                android:autoLink="phone"
                android:linksClickable="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/whatsapp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:id="@+id/version"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
