<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuickRegistrationActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerVertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/layout_sms"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/register_bg" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/register_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="270dp"
                    android:background="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rel_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="8dp">

                <EditText
                    android:id="@+id/inputName"
                    style="@style/styleEditTxt"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/lbl_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/inputEmail"
                    style="@style/styleEditTxt"
                    android:layout_below="@id/inputName"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/lbl_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <RelativeLayout
                    android:id="@+id/rel_mob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputEmail">

                    <TextView
                        android:id="@+id/code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/code"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false" />

                    <EditText
                        android:id="@+id/inputMobile"
                        style="@style/styleEditTxt"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/code"
                        android:background="@null"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/lbl_mobile"
                        android:inputType="phone"
                        android:maxLength="10" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rel_mob"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:text="Gender : "
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/myRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rel_mob"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/gender_tv"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/apptheme_btn_radio_holo_light"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:button="@drawable/apptheme_btn_radio_holo_light"
                        android:text="@string/female" />
                </RadioGroup>
                <CheckBox
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myRadioGroup"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:paddingTop="8dp" />

                <TextView
                    android:id="@+id/terms_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myRadioGroup"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/terms" />

                <Button
                    android:id="@+id/btn_request_sms"
                    style="@style/styleBtnTxt"
                    android:layout_width="match_parent"
                    android:layout_below="@id/terms"
                    android:layout_marginTop="15dp"
                    android:text="@string/register"
                    android:textAllCaps="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:fontFamily="Roboto"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_otp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/register_bg" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/register_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:background="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_edit_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:padding="8dp">

                <EditText
                    android:id="@+id/txt_edit_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="15dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/lbl_mobile"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btn_edit_mobile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@mipmap/edit" />

                <EditText
                    android:id="@+id/inputOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_edit_mobile"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/wait_sms"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/otp_progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/inputOtp"
                    android:layout_margin="16dp"
                    android:indeterminateTint="@color/colorAccent"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/regenerateLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputOtp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/regenerate_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/inputOtp"
                        android:layout_margin="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/regenerate_otp"
                        android:textColor="#808080"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/reg_img"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/regenerate" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_verify_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regenerateLayout"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"
                    android:text="@string/verify"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </RelativeLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:fontFamily="Roboto"
                android:text="@string/verification"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>

    </androidx.viewpager.widget.ViewPager>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

</RelativeLayout>
